Bug 146992 - Arrowheads in dropdowns shift a little when opened
Summary: Arrowheads in dropdowns shift a little when opened
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.3.0.2 rc
Hardware: All Linux (All)
: low trivial
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0 target:7.3.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2022-01-26 02:20 UTC by Aron Budea
Modified: 2022-02-06 22:36 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2022-01-26 02:20:33 UTC
In Calc, open eg. Font name or Font size dropdowns in the toolbar.

=> Note how the tiny arrowhead in the dropdown button shifts to the right a little.

Probably GTK3-specific, with gen VCL plugin there's also a shift, but that's due to the 3D-effect of the button.
Bibisected to the following commit using repo bibisect-linux-64-7.3. Adding CC: to  Caolán McNamara.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=2acdb3e617658ca19de26e8928e42b4955622feb
author		Caolán McNamara <caolanm@redhat.com>		2021-11-19 11:38:58 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2021-11-23 17:36:13 +0100

tdf#139460 improve autofilter sub-menu interaction under gtk
Comment 1 Caolán McNamara 2022-01-26 12:44:57 UTC
It seems to be the "gtk_window_set_attached_to(pMenu, pComboBox);" line
Comment 2 Commit Notification 2022-01-26 16:35:47 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c5cd7cd0fdc32969971c05a6b4fa0b5aeaa93a49

tdf#146992 gtk_window_set_attached_to causing widgets to shift

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Caolán McNamara 2022-01-26 16:39:21 UTC
done in trunk, backport to 7-3 in gerrit
Comment 4 Commit Notification 2022-01-26 16:44:01 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/53e5f7e031ebb35de29f569cc70d0d5967263873

tdf#146992 gtk_window_set_attached_to causing widgets to shift

It will be available in 7.3.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Aron Budea 2022-02-06 22:36:42 UTC
Verified, thanks for fixing, Caolán!

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: d5f015185240a7bddfed7ddf10d6b5426e35fb72
CPU threads: 16; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded