tdf#146992 gtk_window_set_attached_to causing widgets to shift

which isn't desirable, just drop its use.

Change-Id: Ic29efa9e785cad3c221e0ef37816b8485979e719